# autodiff

benchmarks/: CMakeLists.txt
benchmarks/patch/: adept_sfinae.patch
benchmarks/src/: adept_tester.hpp  adolc_tester.hpp  adolc_testers.hpp  autodiff_testers.hpp  ceres_tester.hpp  common.hpp  cppad_tester.hpp  cppadcg_tester.hpp  numerical_tester.hpp  run_speedtests.cpp  sacado_tester.hpp  se3.hpp  test_interface.hpp  test_utils.hpp  tester_functions.hpp  tests.hpp  tests_manif.hpp
benchmarks/visualization/: data  data.csv  data_size2.csv  data_size5.csv  visualization.ipynb
